--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bitter:wght@500&display=swap" rel="stylesheet">
+    <script src="node_modules/sweetalert2/dist/sweetalert2.all.min.js"></script>
 </head>
 <body>
     <div class="form">
@@ -16,7 +17,7 @@
         <input type="number" class="rows" placeholder="Enter number of rows">
         <input type="number" class="columns" placeholder="Enter number of columns">
         <div class="btns">
-            <button onclick="generateTable()">Generate</button>
+            <button id="generateBtn" onclick="generateTable()">Generate</button>
             <button onclick="ExportToExcel('xlsx')">Export</button>
         </div>
     </div>
@@ -25,7 +26,7 @@
             <tbody class="sheet-body"></tbody>
         </table>
     </div>
+    <script type="text/javascript" src="https://unpkg.com/xlsx@0.15.1/dist/xlsx.full.min.js"></script>
+    <script src="./script.js"></script>
 </body>
-<script type="text/javascript" src="https://unpkg.com/xlsx@0.15.1/dist/xlsx.full.min.js"></script>
-<script src="./script.js"></script>
 </html>
