added alerts to be displayed

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <input type="number" class="rows" placeholder="Enter number of rows">
         <input type="number" class="columns" placeholder="Enter number of columns">
         <div class="btns">
-            <button id="generateBtn" onclick="generateTable()">Generate</button>
+            <button onclick="generateTable()">Generate</button>
             <button onclick="ExportToExcel('xlsx')">Export</button>
         </div>
     </div>
